    * Added major tick customizability to axis
    * Added possibility to use user-defined values as axis-labels
    * Added support for adding an array to Image_Graph_Dataset_Trivial for easy point addition
    * Added some error/insanity checks
    * Added Image_Graph_Tool class with static function for bezier curve-smoothing for drivers without native support (fx. GD)
    * Implemented drivers to support different output formats
        - Currently full GD (JPEG/PNG/GIF/WBMP), SVG and PDF (PDFlib) support
        - Semi-supported drivers SWF (Ming)
        - Drivers planned SVG (XML_SVG), PDF (File_PDF) and SWF (libswf)
        - No BC breaking API changes
        - Currently no support for animations, i.e. SVG and SWF
    * Re-implemented support for line styles
    * Fonts now propagate through the structure, meaning if you set a font on the Graph all other elements inherit this font (but can be overridden)
        - This does *not* break BC
    * Modified Image_Graph_Axis_Radar to be a category axis
    * Modified Image_Graph_Dataset to allow for y-value to be an array of values (to support candlestick diagrams)
    * Changed pie chart legends, so they show all data values as legend except just one for complete chart
    * Changed logging behaviour (added Image_Graph::setLog() method)
    * Changed while-list-each to foreach for performance reasons (minor)
    * Changed Image_Graph_Title constructor slightly (second parameter, see Docs. for details)
    * Changed Image_Graph_Axis::setTitle() slightly to accomodate propagating fonts (no BC break)
    * Included some more aliases for the Image_Graph::factory() method
    * Updated how bar charts calculate width
    * Legends now scale properly	
    * Legends now show differently depending on plot type
    * API Changes with minor impact on BC
        - Removed caching
        - Removed Image_Graph::saveAs(), functionality moved to Image_Graph_Driver::done() method
        - Removed Image_Graph::thumbnail()